@@ -22,6 +22,7 @@ XX/XX/XX
 * Make ONNXHelper slightly more robust (!940)
 * Enabled compiler optimizations by inlining many common data conversion functions (!942)
 * Use descreening instead of subtraction to generate starnet starmask, for better integration with recomposition tool (!941)
+* Added prefix arg to SirilInterface.set_seq_frame_pixeldata() to make it easier to create new sequences
 
 siril 1.4.0-beta4
 09/28/25
